Quickview: Prevent image from being horizontally stretched

--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -78,6 +78,7 @@ a.product-quick-view-button {
 
 			img {
 				vertical-align: middle;
+				width: auto;
 			}
 
 			.flex-direction-nav {
